--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,46 @@ h1{
     font-weight: bolder;
     box-sizing: border-box;
 }
+* {
+  box-sizing: border-box;
+}
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
 
-.intro{
-    font-family: Baloo;
-    /* font-size: xx-large; */
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;
+padding-top: 350px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+#imeg{
+  height: 100%;
 }
 @media (min-width:500px){/*Class name*//*properties*/}
 @media (max-width:499px){/*Class name*//*properties*/}
