--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,8 @@ h1{
 }
 * {
   box-sizing: border-box;
+  height: auto;
 }
-/* Float four columns side by side */
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
-}
-
 /* Remove extra left and right margins, due to padding */
 .row {margin: 0 -5px;
 padding-top: 350px;
@@ -20,6 +14,33 @@ padding-top: 350px;
 
 /* Clear floats after the columns */
 .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.column1 {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+.column2 {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row1 {
+  margin: 0 150px;
+}
+
+.row2 {
+  margin: 0 150px;
+}
+
+/* Clear floats after the columns */
+.row1:after {
   content: "";
   display: table;
   clear: both;
